// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkNavigationBar should render correctly 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar bpk-navigation-bar--centered"
>
  <span
    className="bpk-text bpk-text--base bpk-text--bold bpk-navigation-bar__title"
    id="test-bpk-navigation-bar-title"
  >
    test
  </span>
</nav>
`;

exports[`BpkNavigationBar should render correctly when sticky 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar bpk-navigation-bar--sticky bpk-navigation-bar--centered"
>
  <span
    className="bpk-text bpk-text--base bpk-text--bold bpk-navigation-bar__title"
    id="test-bpk-navigation-bar-title"
  >
    test
  </span>
</nav>
`;

exports[`BpkNavigationBar should render correctly with a "leadingButton" attribute 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar"
>
  <button
    aria-label="test"
    className="bpk-close-button bpk-navigation-bar-icon-button bpk-navigation-bar__item-leading"
    onClick={[Function]}
    title="test"
    type="button"
  >
    <span />
  </button>
  <span
    className="bpk-text bpk-text--base bpk-text--bold bpk-navigation-bar__title"
    id="test-bpk-navigation-bar-title"
  >
    test
  </span>
  <button
    aria-label="test"
    className="bpk-close-button bpk-navigation-bar-icon-button bpk-navigation-bar__item-trailing bpk-navigation-bar__item--invisible"
    onClick={[Function]}
    title="test"
    type="button"
  >
    <span />
  </button>
</nav>
`;

exports[`BpkNavigationBar should render correctly with a "traillingButton" attribute 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar"
>
  <button
    aria-label="test"
    className="bpk-close-button bpk-navigation-bar-icon-button bpk-navigation-bar__item-leading bpk-navigation-bar__item--invisible"
    onClick={[Function]}
    title="test"
    type="button"
  >
    <span />
  </button>
  <span
    className="bpk-text bpk-text--base bpk-text--bold bpk-navigation-bar__title"
    id="test-bpk-navigation-bar-title"
  >
    test
  </span>
  <button
    aria-label="test"
    className="bpk-close-button bpk-navigation-bar-icon-button bpk-navigation-bar__item-trailing"
    onClick={[Function]}
    title="test"
    type="button"
  >
    <span />
  </button>
</nav>
`;

exports[`BpkNavigationBar should render correctly with an element for the title attribute 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar"
>
  <button
    aria-label="test"
    className="bpk-close-button bpk-navigation-bar-icon-button bpk-navigation-bar__item-leading bpk-navigation-bar__item--invisible"
    onClick={[Function]}
    title="test"
    type="button"
  >
    <span />
  </button>
  <span>
    test
  </span>
  <button
    aria-label="test"
    className="bpk-close-button bpk-navigation-bar-icon-button bpk-navigation-bar__item-trailing"
    onClick={[Function]}
    title="test"
    type="button"
  >
    <span />
  </button>
</nav>
`;

exports[`BpkNavigationBar should render correctly with arbitrary props 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar bpk-navigation-bar--centered"
  testID="arbitrary value"
>
  <span
    className="bpk-text bpk-text--base bpk-text--bold bpk-navigation-bar__title"
    id="test-bpk-navigation-bar-title"
  >
    test
  </span>
</nav>
`;

exports[`BpkNavigationBar should render correctly with custom class 1`] = `
<nav
  aria-labelledby="test-bpk-navigation-bar-title"
  className="bpk-navigation-bar bpk-navigation-bar--centered my-custom-class"
>
  <span
    className="bpk-text bpk-text--base bpk-text--bold bpk-navigation-bar__title"
    id="test-bpk-navigation-bar-title"
  >
    test
  </span>
</nav>
`;
